--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -7,21 +7,41 @@
     <div class="content-card-header">
         <h1>Вход в систему</h1>
     </div>
+
+    <!-- Локальная авторизация -->
     <div class="login-form">
         <form method="POST">
             {{ form.hidden_tag() }}
             <div class="form-group">
                 {{ form.username.label }}
                 {{ form.username(class="form-control") }}
+                {% for error in form.username.errors %}
+                <span style="color: red;">[{{ error }}]</span>
+                {% endfor %}
             </div>
             <div class="form-group">
                 {{ form.password.label }}
                 {{ form.password(class="form-control") }}
+                {% for error in form.password.errors %}
+                <span style="color: red;">[{{ error }}]</span>
+                {% endfor %}
             </div>
             <div class="form-group">
                 {{ form.submit(class="btn btn-primary-elegant") }}
             </div>
         </form>
+    </div>
+
+    <!-- Разделитель -->
+    <div class="login-divider">
+        <span>или</span>
+    </div>
+
+    <!-- OAuth авторизация через ТПУ - ПРОСТАЯ ССЫЛКА -->
+    <div class="oauth-login">
+        <a href="{{ url_for('routes.oauth_tpu_login') }}" class="btn btn-tpu-oauth">
+            Войти через ТПУ
+        </a>
     </div>
 </div>
 {% endblock %}
